--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,3 @@
-pip==19.2.3
-bump2version==0.5.11
-wheel==0.33.6
-watchdog==0.9.0
-flake8==3.7.8
-tox==3.14.0
-coverage==4.5.4
-Sphinx==1.8.5
-twine==1.14.0
-numpy>=1.16.0
-aioinflux
-pandas
-astropy
+--index-url https://pypi.python.org/simple/
 
-pytest==4.6.5
-pytest-runner==5.1
+-e .
