--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,15 @@ language: python
 python:
   - 3.7
 
+services:
+  - docker
+
 # Command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install: pip install -r requirements.txt
+
+before_install:
+  - docker pull influxdb
+  - docker run -d -p 8086:8086 -v influxdb:/var/lib/influxdb influxdb
 
 script:
   - python setup.py test
