Update cassettes for new responses

--- a/tests/cassettes/test_auth_password.yaml
+++ b/tests/cassettes/test_auth_password.yaml
@@ -9,12 +9,12 @@ interactions:
       Connection:
       - keep-alive
       User-Agent:
-      - python-requests/2.22.0
+      - python-requests/2.25.1
     method: GET
     uri: https://roundtable.lsst.codes/segwarides/
   response:
     body:
-      string: '{"_metadata": {"name": "segwarides", "version": "0.2.0", "description":
+      string: '{"_metadata": {"name": "segwarides", "version": "0.4.1", "description":
         "A simple app to serve credentials to other services.", "repository_url":
         "https://github.com/lsst-sqre/segwarides", "documentation_url": "https://github.com/lsst-sqre/segwarides"}}'
     headers:
@@ -25,9 +25,7 @@ interactions:
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Fri, 29 May 2020 21:47:45 GMT
-      Server:
-      - nginx/1.17.7
+      - Mon, 15 Feb 2021 18:10:36 GMT
       Strict-Transport-Security:
       - max-age=15724800; includeSubDomains
     status:
@@ -43,24 +41,21 @@ interactions:
       Connection:
       - keep-alive
       User-Agent:
-      - python-requests/2.22.0
+      - python-requests/2.25.1
     method: GET
     uri: https://roundtable.lsst.codes/segwarides/creds/test_efd
   response:
     body:
-      string: '{"host": "foo.bar.baz.net", "username": "foo", "password":
-        "bar"}'
+      string: '{"host": "foo.bar.baz.net", "username": "foo", "password": "bar"}'
     headers:
       Connection:
       - keep-alive
       Content-Length:
-      - '90'
+      - '65'
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Fri, 29 May 2020 21:47:45 GMT
-      Server:
-      - nginx/1.17.7
+      - Mon, 15 Feb 2021 18:10:37 GMT
       Strict-Transport-Security:
       - max-age=15724800; includeSubDomains
     status:
