--- a/tests/cassettes/test_efd_names.yaml
+++ b/tests/cassettes/test_efd_names.yaml
@@ -14,7 +14,7 @@ interactions:
     uri: https://roundtable.lsst.codes/segwarides/
   response:
     body:
-      string: '{"_metadata": {"name": "segwarides", "version": "0.4.1", "description":
+      string: '{"_metadata": {"name": "segwarides", "version": "0.4.2", "description":
         "A simple app to serve credentials to other services.", "repository_url":
         "https://github.com/lsst-sqre/segwarides", "documentation_url": "https://github.com/lsst-sqre/segwarides"}}'
     headers:
@@ -25,7 +25,7 @@ interactions:
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Mon, 15 Feb 2021 18:10:37 GMT
+      - Thu, 18 Mar 2021 19:03:33 GMT
       Strict-Transport-Security:
       - max-age=15724800; includeSubDomains
     status:
@@ -46,7 +46,7 @@ interactions:
     uri: https://roundtable.lsst.codes/segwarides/
   response:
     body:
-      string: '{"_metadata": {"name": "segwarides", "version": "0.4.1", "description":
+      string: '{"_metadata": {"name": "segwarides", "version": "0.4.2", "description":
         "A simple app to serve credentials to other services.", "repository_url":
         "https://github.com/lsst-sqre/segwarides", "documentation_url": "https://github.com/lsst-sqre/segwarides"}}'
     headers:
@@ -57,7 +57,7 @@ interactions:
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Mon, 15 Feb 2021 18:10:37 GMT
+      - Thu, 18 Mar 2021 19:03:33 GMT
       Strict-Transport-Security:
       - max-age=15724800; includeSubDomains
     status:
@@ -78,7 +78,7 @@ interactions:
     uri: https://roundtable.lsst.codes/segwarides/list
   response:
     body:
-      string: '["ncsa_teststand_efd", "ldf_int_efd", "base_efd", "test_efd", "summit_efd"]'
+      string: '["summit_efd", "ncsa_teststand_efd", "ldf_int_efd", "base_efd", "test_efd"]'
     headers:
       Connection:
       - keep-alive
@@ -87,7 +87,7 @@ interactions:
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Mon, 15 Feb 2021 18:10:38 GMT
+      - Thu, 18 Mar 2021 19:03:33 GMT
       Strict-Transport-Security:
       - max-age=15724800; includeSubDomains
     status:
@@ -108,7 +108,7 @@ interactions:
     uri: https://roundtable.lsst.codes/segwarides/list
   response:
     body:
-      string: '["ncsa_teststand_efd", "ldf_int_efd", "base_efd", "test_efd", "summit_efd"]'
+      string: '["summit_efd", "ncsa_teststand_efd", "ldf_int_efd", "base_efd", "test_efd"]'
     headers:
       Connection:
       - keep-alive
@@ -117,7 +117,7 @@ interactions:
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Mon, 15 Feb 2021 18:10:38 GMT
+      - Thu, 18 Mar 2021 19:03:33 GMT
       Strict-Transport-Security:
       - max-age=15724800; includeSubDomains
     status:
@@ -138,7 +138,7 @@ interactions:
     uri: https://roundtable.lsst.codes/segwarides/list
   response:
     body:
-      string: '["ncsa_teststand_efd", "ldf_int_efd", "base_efd", "test_efd", "summit_efd"]'
+      string: '["summit_efd", "ncsa_teststand_efd", "ldf_int_efd", "base_efd", "test_efd"]'
     headers:
       Connection:
       - keep-alive
@@ -147,7 +147,7 @@ interactions:
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Mon, 15 Feb 2021 18:10:38 GMT
+      - Thu, 18 Mar 2021 19:03:34 GMT
       Strict-Transport-Security:
       - max-age=15724800; includeSubDomains
     status:
@@ -168,7 +168,7 @@ interactions:
     uri: https://roundtable.lsst.codes/segwarides/list
   response:
     body:
-      string: '["ncsa_teststand_efd", "ldf_int_efd", "base_efd", "test_efd", "summit_efd"]'
+      string: '["summit_efd", "ncsa_teststand_efd", "ldf_int_efd", "base_efd", "test_efd"]'
     headers:
       Connection:
       - keep-alive
@@ -177,7 +177,7 @@ interactions:
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Mon, 15 Feb 2021 18:10:38 GMT
+      - Thu, 18 Mar 2021 19:03:34 GMT
       Strict-Transport-Security:
       - max-age=15724800; includeSubDomains
     status:
@@ -198,7 +198,7 @@ interactions:
     uri: https://roundtable.lsst.codes/segwarides/list
   response:
     body:
-      string: '["ncsa_teststand_efd", "ldf_int_efd", "base_efd", "test_efd", "summit_efd"]'
+      string: '["summit_efd", "ncsa_teststand_efd", "ldf_int_efd", "base_efd", "test_efd"]'
     headers:
       Connection:
       - keep-alive
@@ -207,7 +207,7 @@ interactions:
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Mon, 15 Feb 2021 18:10:39 GMT
+      - Thu, 18 Mar 2021 19:03:34 GMT
       Strict-Transport-Security:
       - max-age=15724800; includeSubDomains
     status:
@@ -228,7 +228,7 @@ interactions:
     uri: https://roundtable.lsst.codes/segwarides/list
   response:
     body:
-      string: '["ncsa_teststand_efd", "ldf_int_efd", "base_efd", "test_efd", "summit_efd"]'
+      string: '["summit_efd", "ncsa_teststand_efd", "ldf_int_efd", "base_efd", "test_efd"]'
     headers:
       Connection:
       - keep-alive
@@ -237,7 +237,7 @@ interactions:
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Mon, 15 Feb 2021 18:10:39 GMT
+      - Thu, 18 Mar 2021 19:03:34 GMT
       Strict-Transport-Security:
       - max-age=15724800; includeSubDomains
     status:
