--- a/tests/cassettes/test_fields.yaml
+++ b/tests/cassettes/test_fields.yaml
@@ -19,9 +19,9 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Mon, 15 Feb 2021 18:10:41 GMT
+      - Thu, 18 Mar 2021 19:03:37 GMT
       Request-Id:
-      - 1d3c2ddd-6fb9-11eb-81f1-0242ac110002
+      - a4efbe2d-881c-11eb-8026-0242ac110002
       Transfer-Encoding:
       - chunked
       X-Influxdb-Build:
@@ -29,7 +29,7 @@ interactions:
       X-Influxdb-Version:
       - 1.7.6
       X-Request-Id:
-      - 1d3c2ddd-6fb9-11eb-81f1-0242ac110002
+      - a4efbe2d-881c-11eb-8026-0242ac110002
     status:
       code: 200
       message: OK
@@ -3044,15 +3044,15 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Mon, 15 Feb 2021 18:10:41 GMT
+      - Thu, 18 Mar 2021 19:03:37 GMT
       Request-Id:
-      - 1d4529b9-6fb9-11eb-81f2-0242ac110002
+      - a4f69430-881c-11eb-8027-0242ac110002
       X-Influxdb-Build:
       - OSS
       X-Influxdb-Version:
       - 1.7.6
       X-Request-Id:
-      - 1d4529b9-6fb9-11eb-81f2-0242ac110002
+      - a4f69430-881c-11eb-8027-0242ac110002
     status:
       code: 204
       message: No Content
@@ -3072,7 +3072,7 @@ interactions:
     uri: https://roundtable.lsst.codes/segwarides/
   response:
     body:
-      string: '{"_metadata": {"name": "segwarides", "version": "0.4.1", "description":
+      string: '{"_metadata": {"name": "segwarides", "version": "0.4.2", "description":
         "A simple app to serve credentials to other services.", "repository_url":
         "https://github.com/lsst-sqre/segwarides", "documentation_url": "https://github.com/lsst-sqre/segwarides"}}'
     headers:
@@ -3083,7 +3083,7 @@ interactions:
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Mon, 15 Feb 2021 18:10:41 GMT
+      - Thu, 18 Mar 2021 19:03:37 GMT
       Strict-Transport-Security:
       - max-age=15724800; includeSubDomains
     status:
@@ -3104,16 +3104,17 @@ interactions:
     uri: https://roundtable.lsst.codes/segwarides/creds/test_efd
   response:
     body:
-      string: '{"host": "foo.bar.baz.net", "username": "foo", "password": "bar"}'
+      string: '{"host": "foo.bar.baz.net", "username": "foo", "password": "bar", "schema_registry":
+        "https://schema-registry-foo.bar.baz"}'
     headers:
       Connection:
       - keep-alive
       Content-Length:
-      - '65'
+      - '123'
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Mon, 15 Feb 2021 18:10:42 GMT
+      - Thu, 18 Mar 2021 19:03:37 GMT
       Strict-Transport-Security:
       - max-age=15724800; includeSubDomains
     status:
@@ -3139,9 +3140,9 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Mon, 15 Feb 2021 18:10:42 GMT
+      - Thu, 18 Mar 2021 19:03:37 GMT
       Request-Id:
-      - 1d9aa2e5-6fb9-11eb-81f3-0242ac110002
+      - a54b0e78-881c-11eb-8028-0242ac110002
       Transfer-Encoding:
       - chunked
       X-Influxdb-Build:
@@ -3149,7 +3150,7 @@ interactions:
       X-Influxdb-Version:
       - 1.7.6
       X-Request-Id:
-      - 1d9aa2e5-6fb9-11eb-81f3-0242ac110002
+      - a54b0e78-881c-11eb-8028-0242ac110002
     status:
       code: 200
       message: OK
@@ -3174,9 +3175,9 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Mon, 15 Feb 2021 18:10:42 GMT
+      - Thu, 18 Mar 2021 19:03:37 GMT
       Request-Id:
-      - 1d9b6d9b-6fb9-11eb-81f4-0242ac110002
+      - a54bcfaf-881c-11eb-8029-0242ac110002
       Transfer-Encoding:
       - chunked
       X-Influxdb-Build:
@@ -3184,7 +3185,7 @@ interactions:
       X-Influxdb-Version:
       - 1.7.6
       X-Request-Id:
-      - 1d9b6d9b-6fb9-11eb-81f4-0242ac110002
+      - a54bcfaf-881c-11eb-8029-0242ac110002
     status:
       code: 200
       message: OK
