--- a/tests/cassettes/test_auth_list.yaml
+++ b/tests/cassettes/test_auth_list.yaml
@@ -25,7 +25,7 @@ interactions:
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Thu, 18 Mar 2021 19:03:32 GMT
+      - Thu, 18 Mar 2021 23:29:42 GMT
       Strict-Transport-Security:
       - max-age=15724800; includeSubDomains
     status:
@@ -46,16 +46,17 @@ interactions:
     uri: https://roundtable.lsst.codes/segwarides/list
   response:
     body:
-      string: '["summit_efd", "ncsa_teststand_efd", "ldf_int_efd", "base_efd", "test_efd"]'
+      string: '["summit_efd", "ncsa_teststand_efd", "ldf_stable_efd", "ldf_int_efd",
+        "base_efd", "test_efd"]'
     headers:
       Connection:
       - keep-alive
       Content-Length:
-      - '75'
+      - '93'
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Thu, 18 Mar 2021 19:03:33 GMT
+      - Thu, 18 Mar 2021 23:29:42 GMT
       Strict-Transport-Security:
       - max-age=15724800; includeSubDomains
     status:
