--- a/tests/cassettes/test_efd_names.yaml
+++ b/tests/cassettes/test_efd_names.yaml
@@ -9,7 +9,7 @@ interactions:
       Connection:
       - keep-alive
       User-Agent:
-      - python-requests/2.25.1
+      - python-requests/2.26.0
     method: GET
     uri: https://roundtable.lsst.codes/segwarides/
   response:
@@ -25,7 +25,7 @@ interactions:
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Thu, 18 Mar 2021 23:29:42 GMT
+      - Wed, 27 Oct 2021 17:15:13 GMT
       Strict-Transport-Security:
       - max-age=15724800; includeSubDomains
     status:
@@ -41,7 +41,7 @@ interactions:
       Connection:
       - keep-alive
       User-Agent:
-      - python-requests/2.25.1
+      - python-requests/2.26.0
     method: GET
     uri: https://roundtable.lsst.codes/segwarides/
   response:
@@ -57,7 +57,7 @@ interactions:
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Thu, 18 Mar 2021 23:29:42 GMT
+      - Wed, 27 Oct 2021 17:15:13 GMT
       Strict-Transport-Security:
       - max-age=15724800; includeSubDomains
     status:
@@ -73,22 +73,22 @@ interactions:
       Connection:
       - keep-alive
       User-Agent:
-      - python-requests/2.25.1
+      - python-requests/2.26.0
     method: GET
     uri: https://roundtable.lsst.codes/segwarides/list
   response:
     body:
-      string: '["summit_efd", "ncsa_teststand_efd", "ldf_stable_efd", "ldf_int_efd",
-        "base_efd", "test_efd"]'
+      string: '["ldf_int_efd", "base_efd", "tucson_teststand_efd", "test_efd", "summit_efd",
+        "ncsa_teststand_efd", "ldf_stable_efd"]'
     headers:
       Connection:
       - keep-alive
       Content-Length:
-      - '93'
+      - '117'
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Thu, 18 Mar 2021 23:29:42 GMT
+      - Wed, 27 Oct 2021 17:15:13 GMT
       Strict-Transport-Security:
       - max-age=15724800; includeSubDomains
     status:
@@ -104,22 +104,22 @@ interactions:
       Connection:
       - keep-alive
       User-Agent:
-      - python-requests/2.25.1
+      - python-requests/2.26.0
     method: GET
     uri: https://roundtable.lsst.codes/segwarides/list
   response:
     body:
-      string: '["summit_efd", "ncsa_teststand_efd", "ldf_stable_efd", "ldf_int_efd",
-        "base_efd", "test_efd"]'
+      string: '["ldf_int_efd", "base_efd", "tucson_teststand_efd", "test_efd", "summit_efd",
+        "ncsa_teststand_efd", "ldf_stable_efd"]'
     headers:
       Connection:
       - keep-alive
       Content-Length:
-      - '93'
+      - '117'
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Thu, 18 Mar 2021 23:29:43 GMT
+      - Wed, 27 Oct 2021 17:15:13 GMT
       Strict-Transport-Security:
       - max-age=15724800; includeSubDomains
     status:
@@ -135,22 +135,22 @@ interactions:
       Connection:
       - keep-alive
       User-Agent:
-      - python-requests/2.25.1
+      - python-requests/2.26.0
     method: GET
     uri: https://roundtable.lsst.codes/segwarides/list
   response:
     body:
-      string: '["summit_efd", "ncsa_teststand_efd", "ldf_stable_efd", "ldf_int_efd",
-        "base_efd", "test_efd"]'
+      string: '["ldf_int_efd", "base_efd", "tucson_teststand_efd", "test_efd", "summit_efd",
+        "ncsa_teststand_efd", "ldf_stable_efd"]'
     headers:
       Connection:
       - keep-alive
       Content-Length:
-      - '93'
+      - '117'
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Thu, 18 Mar 2021 23:29:43 GMT
+      - Wed, 27 Oct 2021 17:15:14 GMT
       Strict-Transport-Security:
       - max-age=15724800; includeSubDomains
     status:
@@ -166,22 +166,22 @@ interactions:
       Connection:
       - keep-alive
       User-Agent:
-      - python-requests/2.25.1
+      - python-requests/2.26.0
     method: GET
     uri: https://roundtable.lsst.codes/segwarides/list
   response:
     body:
-      string: '["summit_efd", "ncsa_teststand_efd", "ldf_stable_efd", "ldf_int_efd",
-        "base_efd", "test_efd"]'
+      string: '["ldf_int_efd", "base_efd", "tucson_teststand_efd", "test_efd", "summit_efd",
+        "ncsa_teststand_efd", "ldf_stable_efd"]'
     headers:
       Connection:
       - keep-alive
       Content-Length:
-      - '93'
+      - '117'
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Thu, 18 Mar 2021 23:29:43 GMT
+      - Wed, 27 Oct 2021 17:15:14 GMT
       Strict-Transport-Security:
       - max-age=15724800; includeSubDomains
     status:
@@ -197,22 +197,22 @@ interactions:
       Connection:
       - keep-alive
       User-Agent:
-      - python-requests/2.25.1
+      - python-requests/2.26.0
     method: GET
     uri: https://roundtable.lsst.codes/segwarides/list
   response:
     body:
-      string: '["summit_efd", "ncsa_teststand_efd", "ldf_stable_efd", "ldf_int_efd",
-        "base_efd", "test_efd"]'
+      string: '["ldf_int_efd", "base_efd", "tucson_teststand_efd", "test_efd", "summit_efd",
+        "ncsa_teststand_efd", "ldf_stable_efd"]'
     headers:
       Connection:
       - keep-alive
       Content-Length:
-      - '93'
+      - '117'
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Thu, 18 Mar 2021 23:29:43 GMT
+      - Wed, 27 Oct 2021 17:15:14 GMT
       Strict-Transport-Security:
       - max-age=15724800; includeSubDomains
     status:
@@ -228,22 +228,22 @@ interactions:
       Connection:
       - keep-alive
       User-Agent:
-      - python-requests/2.25.1
+      - python-requests/2.26.0
     method: GET
     uri: https://roundtable.lsst.codes/segwarides/list
   response:
     body:
-      string: '["summit_efd", "ncsa_teststand_efd", "ldf_stable_efd", "ldf_int_efd",
-        "base_efd", "test_efd"]'
+      string: '["ldf_int_efd", "base_efd", "tucson_teststand_efd", "test_efd", "summit_efd",
+        "ncsa_teststand_efd", "ldf_stable_efd"]'
     headers:
       Connection:
       - keep-alive
       Content-Length:
-      - '93'
+      - '117'
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Thu, 18 Mar 2021 23:29:46 GMT
+      - Wed, 27 Oct 2021 17:15:14 GMT
       Strict-Transport-Security:
       - max-age=15724800; includeSubDomains
     status:
@@ -259,22 +259,53 @@ interactions:
       Connection:
       - keep-alive
       User-Agent:
-      - python-requests/2.25.1
+      - python-requests/2.26.0
     method: GET
     uri: https://roundtable.lsst.codes/segwarides/list
   response:
     body:
-      string: '["summit_efd", "ncsa_teststand_efd", "ldf_stable_efd", "ldf_int_efd",
-        "base_efd", "test_efd"]'
+      string: '["ldf_int_efd", "base_efd", "tucson_teststand_efd", "test_efd", "summit_efd",
+        "ncsa_teststand_efd", "ldf_stable_efd"]'
     headers:
       Connection:
       - keep-alive
       Content-Length:
-      - '93'
+      - '117'
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Thu, 18 Mar 2021 23:29:51 GMT
+      - Wed, 27 Oct 2021 17:15:14 GMT
+      Strict-Transport-Security:
+      - max-age=15724800; includeSubDomains
+    status:
+      code: 200
+      message: OK
+- request:
+    body: null
+    headers:
+      Accept:
+      - '*/*'
+      Accept-Encoding:
+      - gzip, deflate
+      Connection:
+      - keep-alive
+      User-Agent:
+      - python-requests/2.26.0
+    method: GET
+    uri: https://roundtable.lsst.codes/segwarides/list
+  response:
+    body:
+      string: '["ldf_int_efd", "base_efd", "tucson_teststand_efd", "test_efd", "summit_efd",
+        "ncsa_teststand_efd", "ldf_stable_efd"]'
+    headers:
+      Connection:
+      - keep-alive
+      Content-Length:
+      - '117'
+      Content-Type:
+      - application/json; charset=utf-8
+      Date:
+      - Wed, 27 Oct 2021 17:15:15 GMT
       Strict-Transport-Security:
       - max-age=15724800; includeSubDomains
     status:
